@@ -170,7 +170,8 @@
 	     (setcdr nethack-status-lines str))
 	   (set-buffer (nethack-buffer winid))
 	   (erase-buffer)
-	   (insert (car nethack-status-lines) "\n" (cdr nethack-status-lines)))
+	   (nethack-parse-status-lines (car nethack-status-lines) (cdr nethack-status-lines))
+	   (insert (nethack-format-status nethack-status-string)))
 	  ((eq nethack-buffer-type 'nhw-message)
 	   (goto-char (point-max))
 	   (insert "\n" (propertize str 'face 'bold))
